--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<h1>Vice Versaa</h1>
+<h1 style="color:red">Vice Versaa</h1>
 <form action="{% url 'reverse'%}">
 	<textarea cols="50" rows="10" name="usertext"></textarea>
 	<br><br>
